# feedy

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_rename_content_markdown_to_content_html.py  b2c3d4e5f6a7_add_blocked_domains_and_article_domain.py  c07c4f0e1ab6_enable_sqlite_wal_mode.py  c3d4e5f6a7b8_add_category_icon.py  d4e5f6a7b8c9_add_users_and_sessions.py  e5f6a7b8c9d0_add_language_to_app_settings.py  f6a7b8c9d0e1_add_favorited_at_to_articles.py  f9c59b64bcd0_initial_migration_create_categories_.py  g7b8c9d0e1f2_add_reading_time_to_articles.py  h8c9d0e1f2g3_add_article_performance_indexes.py
src/: worker.py
src/api/: main.py  schemas.py
src/api/routers/: articles.py  auth.py  blocked_domains.py  categories.py  epub.py  opml.py  pages.py  websites.py
src/application/: __init__.py
src/application/services/: __init__.py  auth.py  content_converter.py  domain_utils.py  epub.py  feed_discovery.py  opml.py  reading_time.py  rss_parser.py  url_filter.py  validators.py
src/application/workers/: __init__.py  fetch_articles.py
src/domain/models/: __init__.py  app_settings.py  article.py  blocked_domain.py  category.py  session.py  website.py
src/i18n/: __init__.py
src/i18n/translations/: en.json  pl.json
src/infrastructure/: config.py  database.py  logging.py
src/infrastructure/repositories/: __init__.py  article_repository.py  auth_repository.py  blocked_domain_repository.py  category_repository.py  website_repository.py
src/static/css/: input.css  style.css
src/static/js/: article_text_size.js  category_collapse.js  crud.js  epub_selection.js  favorite_toggle.js  icons.js  reader_mode.js  (+2 more)
src/templates/: archive.html  articles.html  base.html  change_password.html  favorites.html  feeds.html  login.html  reader.html  settings.html  subscriptions.html
tests/: test_epub_export.py  test_opml_export.py  test_ppe_parser.py  test_substack_parser.py  test_tjll_parser.py  test_transactional_session.py
(+65 files in other folders)
