[tool.poetry]
name = "feedy"
version = "0.1.0"
description = "Feedy - RSS reader application that pulls articles and extracts clean content"
authors = ["Lukas"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
uvicorn = "^0.34.0"
feedparser = "^6.0.0"
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.0"
trafilatura = "^2.0.0"
readability-lxml = "^0.8.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^24.0.0"
flake8 = "^7.0.0"
mypy = "^1.0.0"
pre-commit = "^4.0.0"
pyyaml = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
