[tool.poetry]
name = "feedy"
version = "0.1.0"
description = "Feedy - RSS reader application that pulls articles and extracts clean content"
authors = ["Lukas"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.14.*"
fastapi = "0.128.0"
sqlalchemy = "2.0.46"
alembic = "1.18.1"
uvicorn = "0.40.0"
feedparser = "6.0.12"
httpx = "0.28.1"
beautifulsoup4 = "4.14.3"
trafilatura = "2.0.0"
readability-lxml = "0.8.4.1"
jinja2 = "3.1.6"
python-multipart = "0.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
black = "26.1.0"
flake8 = "7.3.0"
mypy = "1.19.1"
pre-commit = "4.5.1"
pyyaml = "6.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = ["alembic/versions/"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
